[package]
name = "gus"
version = "0.1.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
dirs = "5.0.1"
inquire = "0.6.2"
rust-ini = "0.19.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
