[package]
name = "gus-rs"
version = "0.1.0"
edition = "2021"
license = "MIT"
keywords = ["cli", "user", "switch", "easy", "git"]
categories = ["command-line-utilities", "config", "filesystem"]
description = "A simple git user switcher"
repository = "https://github.com/maulik9898/gus-rs"
readme = "README.md"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.23", features = ["derive"] }
color-eyre = { version = "0.6.2", default-features = false }
crossterm = "0.27.0"
dirs = "5.0.1"
inquire = "0.6.2"
rust-ini = "0.19.0"
sqlx = { version = "0.7.1", features = ["sqlite", "runtime-tokio", "macros"] }
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }


[package.metadata.binstall]
pkg-url = "{ repo }/releases/download/v{ version }/{ name }-{ target }-v{ version }{ archive-suffix }"
bin-dir = "{ name }-{ target }-v{ version }/{ bin }{ binary-ext }"
pkg-fmt = "tgz"


[[bin]]
name = "gus"
test = false
bench = false
path = "src/main.rs"

